[package]
name = "simple-stepping-hvac"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Marcus Ofenhed"]
repository = "https://github.com/Ofenhed/ha-simple-stepping-hvac"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
strum = { version = "0.26", features = ["derive"] }
